--- a/index.html
+++ b/index.html
@@ -23,15 +23,13 @@
 					<h1><a href="#"><img src="img/logo.png" alt=""></a></h1>
 				</div>
 		
-				<div>
-					<nav>
-						<ul>
-							<li><a href="#roasts">Our Roasts</a></li>
-							<li><a href="#process">The Process</a></li>
-							<li><a href="#contact">Contact Us</a></li>
-						</ul>
-					</nav>
-				</div>
+				<nav>
+					<ul>
+						<li><a href="#roasts">Our Roasts</a></li>
+						<li><a href="#process">The Process</a></li>
+						<li><a href="#contact">Contact Us</a></li>
+					</ul>
+				</nav>
 			</div>
 		
 			<div>
@@ -50,60 +48,73 @@
 		</header>
 		
 		<section>
-			<img src="img/eveningoak.png" alt="">
-			<header>
-				<h3>Evening Oak</h3>
-			</header>
-			<p>Eastern Java, Indonesia</p>
-			<p>Our featured roast of the season. Pungently rich and complex with hints of night-blooming flowers and coriander in aroma and cup.</p>
-			<p>1 lb $19.95</p>
-			<p><a href="https://www.shopify.com/" target="_blank">Buy Now</a></p>
+			<div>
+				<img src="img/eveningoak.png" alt="Evening Oak Roast">
+				<header>
+					<h3>Evening Oak</h3>
+				</header>
+				<p>Eastern Java, Indonesia</p>
+				<p>Our featured roast of the season. Pungently rich and complex with hints of night-blooming flowers and coriander in aroma and cup.</p>
+				<p>1 lb $19.95</p>
+				<p><a href="https://www.shopify.com/">Buy Now</a></p>
+			</div>
 		</section>
 			
 		<div class="row">
 			<section class="col-sm-12 col-lg-3">
-				<img src="img/houseblend.png" alt="">
-				<header>
-					<h3>Finch House Blend</h3>
-				</header>
-				<p>Cajamarca &amp; Moyobamba Regions, Peru</p>
-				<p>Hint of citrus, complemented by flavors of dark chocolate, peanut and light pepper notes.</p>
-				<p>1 lb $17.95</p>
-				<p><a href="https://www.shopify.com/" target="_blank">Buy Now</a></p>
+				<div>
+					<img src="img/houseblend.png" alt="Finch House Blend Roast">
+					<header>
+						<h3>Finch House Blend</h3>
+					</header>
+					<p>Cajamarca &amp; Moyobamba Regions, Peru</p>
+					<p>Hint of citrus, complemented by flavors of dark chocolate, peanut and light pepper notes.</p>
+					<p>1 lb $17.95</p>
+					<p><a href="https://www.shopify.com/">Buy Now</a></p>
+				</div>
 			</section>
 			
 			<section class="col-sm-12 col-lg-3">
-				<img src="img/sunrise.png" alt="">
-				<header>
-					<h3>Sunrise</h3>
-				</header>
-				<p>La Chiapas, Mexico</p>
-				<p>Light, fruity acidity which complements its fully nutty body and unique spicy tones.</p>
-				<p>1 lb $17.95</p>
-				<p><a href="https://www.shopify.com/" target="_blank">Buy Now</a></p>
+				<div>
+					<img src="img/sunrise.png" alt="Sunrise Roast">
+					<header>
+						<h3>Sunrise</h3>
+					</header>
+					<p>La Chiapas, Mexico</p>
+					<p>Light, fruity acidity which complements its fully nutty body and unique spicy tones.</p>
+					<p>1 lb $17.95</p>
+					<p><a href="https://www.shopify.com/">Buy Now</a></p>
+					</div>
 			</section>
 			
 			<section class="col-sm-12 col-lg-3">
-				<img src="img/midnight.png" alt="">
-				<header>
-					<h3>Midnight</h3>
-				</header>
-				<p>Latin America</p>
-				<p>Roasted into second crack for a big, bold and dark cup. Beans display oil.</p>
-				<p>1 lb $17.95</p>
-				<p><a href="https://www.shopify.com/" target="_blank">Buy Now</a></p>
+				<div>
+					<img src="img/midnight.png" alt="Midnight Roast">
+					<header>
+						<h3>Midnight</h3>
+					</header>
+					<p>Latin America</p>
+					<p>Roasted into second crack for a big, bold and dark cup. Beans display oil.</p>
+					<p>1 lb $17.95</p>
+					<p><a href="https://www.shopify.com/">Buy Now</a></p>
+				</div>
 			</section>
 			
 			<section class="col-sm-12 col-lg-3">
-				<img src="img/espresso.png" alt="">
-				<header>
-					<h3>Espresso</h3>
-				</header>
-				<p>Eastern Java, Indonesia</p>
-				<p>Clean, a little roasty, sumptuous crema, unfussy, delicious.</p>
-				<p>1 lb $19.95</p>
-				<p><a href="https://www.shopify.com/" target="_blank">Buy Now</a></p>
+				<div>
+					<img src="img/espresso.png" alt="Espresso Roast">
+					<header>
+						<h3>Espresso</h3>
+					</header>
+					<p>Eastern Java, Indonesia</p>
+					<p>Clean, a little roasty, sumptuous crema, unfussy, delicious.</p>
+					<p>1 lb $19.95</p>
+					<p><a href="https://www.shopify.com/">Buy Now</a></p>
+				</div>
 			</section>
+			
+			<p>Online orders usually ship quickly and arrive within three business days. We only ship the freshest coffee and your satisfaction is guaranteed. Our rotating, featured coffees are roasted on a more limited basis and your order may be held until the next time a batch hits the roaster. We only ship whole bean, but will grind for you in-store per request.</p>
+			
 		</div>
 	</section>
 	
@@ -114,22 +125,26 @@
 		</header>
 		
 		<div class="row">
-			<div class="col-lg-4">
+			<div class="col-sm-12 col-md-6 col-lg-4">
 				<img src="img/process1.png" alt="">
 				<p>Our coffee is roasted in a hot air, refractory lined roaster with an extraordinary level of control.</p>
 			</div>
 		
-			<div class="col-lg-4">
+			<div class="col-sm-12 col-md 6 col-lg-4">
 				<img src="img/process2.png" alt="">
 				<p>The significance of relying on a high volume of hot air to roast coffee beans can't be understated.</p>
 			</div>
 		
-			<div clas="col-lg-4">
+			<div clas="col-sm-12 col-lg-4">
 				<img src="img/process3.png" alt="">
 				<p>The refractory significantly reduces hot spots which can damage coffee beans and produces a much more even roasting environment.</p>
 			</div>
 		</div>
 	</section>
+	
+	<div class="wrapper">
+		<p>Check out our hand picked <a href="https://www.ncausa.org/About-Coffee/How-to-Brew-Coffee" target="_blank">How To Brew Coffee</a> article!</p>
+	</div>
 	
 	<div>
 		<div class="wrapper">
@@ -141,11 +156,21 @@
 		</div>
 	</div>
 	
+	<form class="hide-lg col-sm-12 wrapper">
+		<fieldset>
+			<legend>Newsletter</legend>
+			<p>Get more info and deals for the best cup of coffee sent to you directly!</p>
+			<label for="email"><b>Email</b></label>
+			<input type="email" class="email" placeholder="Enter Email Addess" name="email" required>
+			<p><a href="#" class="btn">Subscribe</a></p>
+		</fieldset>
+	</form>
+	
 	
 	<footer>
 		<div class="wrapper row">
-			<div class="col-lg-3">
-				<h3><img src="logo.png" alt=""></h3>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+				<h4><img src="logo.png" alt=""></h4>
 			
 				<ul class="social">
 					<li><a href="https://www.facebook.com" target="_blank"><span>Facebook</span></a></li>
@@ -155,38 +180,37 @@
 			</div>
 		
 		
-			<div class="col-lg-3">
-				<nav>
-					<ul>
-						<li><a href="#roasts">Our Roasts</a></li>
-						<li><a href="#process">The Process</a></li>
-						<li><a href="#contact">Contact Us</a></li>
-					</ul>
-				</nav>
+			<div class="hide-sm col-md-4 col-lg-3">
+			<nav>
+				<ul>
+					<li><a href="#roasts">Our Roasts</a></li>
+					<li><a href="#process">The Process</a></li>
+					<li><a href="#contact">Contact Us</a></li>
+				</ul>
+			</nav>
 			</div>
 			
-			<div class="col-lg-3">
+			<div class="col-sm-6 col-md 4 col-lg-3">
 				<ul>
-					
-					<li><address>1055 NW Northrup St Portland, Oregon 97209</address></li>
-					<li><a href="tel:15032270464">503-227-0464</a></li>
-					<li><a href="mailto:coffee@twinfinch.com">coffee@twinfinch.com</a></li>
+					<address>
+						<li>1055 NW Northrup St Portland, Oregon 97209</li>
+						<li><a href="tel:15032270464">503-227-0464</a></li>
+						<li><a href="mailto:coffee@twinfinch.com">coffee@twinfinch.com</a></li>
+					</address>
 				</ul>
 			</div>
 			
-			<div class="col-lg-3">
-				<form>
-					<h3>Newsletter</h3>
+			<form class="hide-sm hide-md col-lg-3">
+				<fieldset>
+					<legend>Newsletter</legend>
 					<p>Get more info and deals for the best cup of coffee sent to you directly!</p>
 					<label for="email"><b>Email</b></label>
-					<input type="text" placeholder="Enter Email Addess" name="email" required>
-					<a href="#" class="btn">Subscribe</a>
-				</form>
-			</div>
+					<input type="email" class="email" placeholder="Enter Email Addess" name="email" required>
+					<p><a href="#" class="btn">Subscribe</a></p>
+				</fieldset>
+			</form>
 
-		
 		</div>
-		
 	
 	</footer>
 	
