--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" type="text/css" href="css/normalize.css">
 <link rel="stylesheet" type="text/css" href="css/framework.css">
 <link rel="stylesheet" type="text/css" href="css/main.css">
+<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;800;900&display=swap" rel="stylesheet">
 	
 </head>
 
@@ -19,11 +20,11 @@
 	<header id="hero">
 		<div class="wrapper">
 			<div class="row">
-				<div>
-					<h1><a href="#"><img src="img/logo.png" alt=""></a></h1>
+				<div class="col-lg-6">
+					<h1><a href="#" class="logo"><img src="img/logo.png" alt=""></a></h1>
 				</div>
 		
-				<nav>
+				<nav class="col-lg-6 f-right">
 					<ul>
 						<li><a href="#roasts">Our Roasts</a></li>
 						<li><a href="#process">The Process</a></li>
@@ -56,7 +57,7 @@
 				<p>Eastern Java, Indonesia</p>
 				<p>Our featured roast of the season. Pungently rich and complex with hints of night-blooming flowers and coriander in aroma and cup.</p>
 				<p>1 lb $19.95</p>
-				<p><a href="https://www.shopify.com/">Buy Now</a></p>
+				<p><a href="https://www.shopify.com/" class="btn">Buy Now</a></p>
 			</div>
 		</section>
 			
@@ -70,7 +71,7 @@
 					<p>Cajamarca &amp; Moyobamba Regions, Peru</p>
 					<p>Hint of citrus, complemented by flavors of dark chocolate, peanut and light pepper notes.</p>
 					<p>1 lb $17.95</p>
-					<p><a href="https://www.shopify.com/">Buy Now</a></p>
+					<p><a href="https://www.shopify.com/" class="btn">Buy Now</a></p>
 				</div>
 			</section>
 			
@@ -83,7 +84,7 @@
 					<p>La Chiapas, Mexico</p>
 					<p>Light, fruity acidity which complements its fully nutty body and unique spicy tones.</p>
 					<p>1 lb $17.95</p>
-					<p><a href="https://www.shopify.com/">Buy Now</a></p>
+					<p><a href="https://www.shopify.com/" class="btn">Buy Now</a></p>
 					</div>
 			</section>
 			
@@ -96,7 +97,7 @@
 					<p>Latin America</p>
 					<p>Roasted into second crack for a big, bold and dark cup. Beans display oil.</p>
 					<p>1 lb $17.95</p>
-					<p><a href="https://www.shopify.com/">Buy Now</a></p>
+					<p><a href="https://www.shopify.com/" class="btn">Buy Now</a></p>
 				</div>
 			</section>
 			
@@ -109,7 +110,7 @@
 					<p>Eastern Java, Indonesia</p>
 					<p>Clean, a little roasty, sumptuous crema, unfussy, delicious.</p>
 					<p>1 lb $19.95</p>
-					<p><a href="https://www.shopify.com/">Buy Now</a></p>
+					<p><a href="https://www.shopify.com/" class="btn">Buy Now</a></p>
 				</div>
 			</section>
 			
@@ -156,21 +157,24 @@
 		</div>
 	</div>
 	
-	<form class="hide-lg col-sm-12 wrapper">
-		<fieldset>
-			<legend>Newsletter</legend>
-			<p>Get more info and deals for the best cup of coffee sent to you directly!</p>
-			<label for="email"><b>Email</b></label>
-			<input type="email" class="email" placeholder="Enter Email Addess" name="email" required>
-			<p><a href="#" class="btn">Subscribe</a></p>
-		</fieldset>
-	</form>
 	
 	
-	<footer>
+	
+	<footer id="contact">
+		
+		<form class="col-sm-12 col-lg-3 f-right wrapper">
+			<fieldset>
+				<legend>Newsletter</legend>
+				<p>Get more info and deals for the best cup of coffee sent to you directly!</p>
+				<label for="email"><b>Email</b></label>
+				<input type="email" class="email" placeholder="Enter Email Addess" name="email" required>
+				<p><a href="#" class="btn">Subscribe</a></p>
+			</fieldset>
+		</form>
+		
 		<div class="wrapper row">
 			<div class="col-sm-6 col-md-4 col-lg-3">
-				<h4><img src="logo.png" alt=""></h4>
+				<h4><img src="img/logo.png" alt=""></h4>
 			
 				<ul class="social">
 					<li><a href="https://www.facebook.com" target="_blank"><span>Facebook</span></a></li>
@@ -190,25 +194,15 @@
 			</nav>
 			</div>
 			
-			<div class="col-sm-6 col-md 4 col-lg-3">
+			<div class="col-sm-6 col-md 4 col-lg-3 f-right">
 				<ul>
 					<address>
 						<li>1055 NW Northrup St Portland, Oregon 97209</li>
-						<li><a href="tel:15032270464">503-227-0464</a></li>
+						<li><a href="tel:+15032270464">503-227-0464</a></li>
 						<li><a href="mailto:coffee@twinfinch.com">coffee@twinfinch.com</a></li>
 					</address>
 				</ul>
 			</div>
-			
-			<form class="hide-sm hide-md col-lg-3">
-				<fieldset>
-					<legend>Newsletter</legend>
-					<p>Get more info and deals for the best cup of coffee sent to you directly!</p>
-					<label for="email"><b>Email</b></label>
-					<input type="email" class="email" placeholder="Enter Email Addess" name="email" required>
-					<p><a href="#" class="btn">Subscribe</a></p>
-				</fieldset>
-			</form>
 
 		</div>
 	
