--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<h1><a href="#" class="logo"><img src="img/logo.png" alt=""></a></h1>
 				</div>
 		
-				<nav class="col-lg-6 f-right">
+				<nav class="col-lg-6 f-right hide-sm">
 					<ul>
 						<li><a href="#roasts">Our Roasts</a></li>
 						<li><a href="#process">The Process</a></li>
@@ -33,7 +33,7 @@
 				</nav>
 			</div>
 		
-			<div>
+			<div class="col-sm-12 col-md-6 col-lg-4">
 				<p>Twin Finch Roastery</p>
 				<p>is an authentic micro-roastery; small, dedicated, and highly focused on quality.</p>
 				<p><a href="#process" class="btn">See the Process</a></p>
