--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" type="text/css" href="css/framework.css">
 <link rel="stylesheet" type="text/css" href="css/main.css">
 <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700;800;900&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/9aceff6804.js" crossorigin="anonymous"></script>
 	
 </head>
 
@@ -63,7 +64,7 @@
 					<p>Eastern Java, Indonesia</p>
 					<p>Our featured roast of the season. Pungently rich and complex with hints of night-blooming flowers and coriander in aroma and cup.</p>
 					<p>1 lb $19.95</p>
-					<p><a href="https://www.shopify.com/" class="btn">Buy Now</a></p>
+					<p class="btn-shop"><a href="https://www.shopify.com/" class="btn">Buy Now</a></p>
 					</div>
 				</div>
 			</div>
@@ -81,7 +82,7 @@
 					<p>Cajamarca &amp; Moyobamba Regions, Peru</p>
 					<p>Hint of citrus, complemented by flavors of dark chocolate, peanut and light pepper notes.</p>
 					<p>1 lb $17.95</p>
-					<p><a href="https://www.shopify.com/" class="btn">Buy Now</a></p>
+					<p class="btn-shop"><a href="https://www.shopify.com/" class="btn">Buy Now</a></p>
 				</div>
 			</section>
 			
@@ -97,7 +98,7 @@
 					<p>La Chiapas, Mexico</p>
 					<p>Light, fruity acidity which complements its fully nutty body and unique spicy tones.</p>
 					<p>1 lb $17.95</p>
-					<p><a href="https://www.shopify.com/" class="btn">Buy Now</a></p>
+					<p class="btn-shop"><a href="https://www.shopify.com/" class="btn">Buy Now</a></p>
 				</div>
 			</section>
 			
@@ -113,7 +114,7 @@
 					<p>Latin America</p>
 					<p>Roasted into second crack for a big, bold and dark cup. Beans display oil.</p>
 					<p>1 lb $17.95</p>
-					<p><a href="https://www.shopify.com/" class="btn">Buy Now</a></p>
+					<p class="btn-shop"><a href="https://www.shopify.com/" class="btn">Buy Now</a></p>
 				</div>
 			</section>
 			
@@ -129,7 +130,7 @@
 					<p>Eastern Java, Indonesia</p>
 					<p>Clean, a little roasty, sumptuous crema, unfussy, delicious.</p>
 					<p>1 lb $19.95</p>
-					<p><a href="https://www.shopify.com/" class="btn">Buy Now</a></p>
+					<p class="btn-shop"><a href="https://www.shopify.com/" class="btn">Buy Now</a></p>
 				</div>
 			</section>
 			</div>
@@ -167,11 +168,11 @@
 		</div>
 	</section>
 	
-	<div class="wrapper">
+	<div class="col-sm-12 col-md-9 center t-center wrapper">
 		<p>Check out our hand picked <a href="https://www.ncausa.org/About-Coffee/How-to-Brew-Coffee" target="_blank">How To Brew Coffee</a> article!</p>
 	</div>
 	
-	<div>
+	<div id="quote" class="col-sm-12 col-md-9 center t-center">
 		<div class="wrapper">
 			<p>Our house blend was rated a 98 by coffeereview.com!</p>
 			<blockquote>
@@ -186,24 +187,29 @@
 	
 	<footer id="contact">
 		
-		<form class="col-sm-12 col-lg-3 f-right wrapper">
+		<form class="col-sm-12 col-lg-3 f-right">
 			<fieldset>
 				<legend>Newsletter</legend>
 				<p>Get more info and deals for the best cup of coffee sent to you directly!</p>
-				<label for="email"><b>Email</b></label>
+				<div class="col-sm-7">
+				<label for="email">Email</label>
 				<input type="email" class="email" placeholder="Enter Email Addess" name="email" required>
-				<p><a href="#" class="btn">Subscribe</a></p>
+				</div>
+				<div class="col-sm-5">
+				<p><a href="#" class="btn subscribe">Subscribe</a></p>
+				</div>
 			</fieldset>
+			
 		</form>
 		
 		<div class="wrapper row">
 			<div class="col-sm-6 col-md-4 col-lg-3">
-				<h4><img src="img/logo.png" alt=""></h4>
+				<h4><a href="#" class="logo"><img src="img/logo.png" alt=""></a></h4>
 			
-				<ul class="social">
-					<li><a href="https://www.facebook.com" target="_blank"><span>Facebook</span></a></li>
-					<li><a href="https://www.twitter.com" target="_blank"><span>Twitter</span></a></li>
-					<li><a href="https://www.instagram.com" target="_blank"><span>Instagram</span></a></li>	
+				<ul id="social">
+					<li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i><span>Facebook</span></a></li>
+					<li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i><span>Twitter</span></a></li>
+					<li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i><span>Instagram</span></a></li>	
 				</ul>
 			</div>
 		
