--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 	<header id="hero">
 		<div class="wrapper">
 			<div class="row">
-				<div class="col-lg-6">
+				<div class="col-lg-4">
 					<h1><a href="#" class="logo"><img src="img/logo.png" alt="Twin Finch"></a></h1>
 				</div>
 		
-				<nav class="col-lg-6 f-right hide-sm">
+				<nav class="col-lg-8 f-right hide-sm">
 					<ul>
 						<li><a href="#roasts">Our Roasts</a></li>
 						<li><a href="#process">The Process</a></li>
@@ -35,7 +35,7 @@
 				</nav>
 			</div>
 		
-			<div class="col-sm-12 col-md-6 col-lg-4 center t-center">
+			<div class="col-sm-12 col-md-6 col-lg-4 center txt-center">
 				<p class="animate__animated animate__backInLeft">Twin Finch Roastery</p>
 				<p class="animate__animated animate__backInRight">is an authentic micro-roastery; small, dedicated, and highly focused on quality.</p>
 				<p class="animate__animated animate__bounceIn"><a href="#process" class="btn">See the Process</a></p>
@@ -45,7 +45,7 @@
 	
 	
 	<section id="roasts" class="wrapper">
-		<header class="center t-center col-sm-12 col-lg-7">
+		<header class="center txt-center col-sm-12 col-lg-7">
 			<div class="bg-box">
 				<h2>Our Roasts</h2>
 				<p>We have a constantly evolving, hand picked selection of fine coffee origins and delicious blends engineered to help you brew a cafe-quality cup at home.</p>
@@ -132,7 +132,7 @@
 			</section>
 			</div>
 		
-			<div class="col-sm-12 col-lg-8 center t-center">
+			<div class="col-sm-12 col-lg-8 center txt-center">
 				<p>Online orders usually ship quickly and arrive within three business days. We only ship the freshest coffee and your satisfaction is guaranteed. Our rotating, featured coffees are roasted on a more limited basis and your order may be held until the next time a batch hits the roaster. We only ship whole bean, but will grind for you in-store per request.</p>
 			</div>
 			
@@ -140,7 +140,7 @@
 	</section>
 	
 	<section id="process" class="wrapper">
-		<header class="center t-center col-sm-12 col-lg-7">
+		<header class="center txt-center col-sm-12 col-lg-7">
 			<div class="bg-box">
 				<h2>The Process</h2>
 				<p>Most small coffee roasters use a single stage burner which offers virtually no control during the roasting process.</p>
@@ -149,30 +149,30 @@
 		
 		<div class="row">
 			<div class="col-sm-12 col-md-6 col-lg-4">
-				<img src="img/process1.png" alt="">
+				<img src="img/process1.svg" alt="" class="img-responsive">
 				<p>Our coffee is roasted in a hot air, refractory lined roaster with an extraordinary level of control.</p>
 			</div>
 		
 			<div class="col-sm-12 col-md 6 col-lg-4">
-				<img src="img/process2.png" alt="">
+				<img src="img/process2.svg" alt="" class="img-responsive">
 				<p>The significance of relying on a high volume of hot air to roast coffee beans can't be understated.</p>
 			</div>
 		
 			<div class="col-sm-12 col-lg-4">
-				<img src="img/process3.png" alt="">
+				<img src="img/process3.svg" alt="" class="img-responsive">
 				<p>The refractory significantly reduces hot spots which can damage coffee beans and produces a much more even roasting environment.</p>
 			</div>
 		</div>
 	</section>
 	
 	<div class="wrapper row">
-		<div class="col-sm-12 col-md-9 center t-center">
-			<p>Check out our hand picked <a href="https://www.ncausa.org/About-Coffee/How-to-Brew-Coffee" class="text-red" target="_blank">How To Brew Coffee</a> article!</p>
+		<div id="article" class="col-sm-12 col-md-9 center txt-center">
+			<p>Check out our hand picked <a href="https://www.ncausa.org/About-Coffee/How-to-Brew-Coffee" class="txt-red" target="_blank">How To Brew Coffee</a> article!</p>
 		</div>
 
-		<div id="quote" class="wrapper">
-			<div class="col-sm-12 col-md-9 center t-center">
-				<p>Our house blend was rated a 98 by <a href="https://www.coffeereview.com/" class="text-red">coffeereview.com</a>!</p>
+		<div class="wrapper">
+			<div id="quote" class="col-sm-12 col-md-9 center txt-center">
+				<p>Our house blend was rated a 98 by <a href="https://www.coffeereview.com/" class="txt-red">coffeereview.com</a>!</p>
 				<blockquote>
 					<p>“This extraordinary coffee almost defies description with its aromatic complexity while retaining a classic clarity of structure.”</p>
 						<footer><p>&mdash; Coffee Review</p></footer>
