--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 			</form>
 
 			<div class="col-sm-6 col-md-4 col-lg-3">
-				<p><a href="#" class="logo"><img src="img/logo.png" alt="Twin Finch"></a></p>
+				<p><a href="#hero" class="logo"><img src="img/logo.png" alt="Twin Finch"></a></p>
 
 				<ul id="social">
 					<li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-f"></i><span>Facebook</span></a></li>
